//protoc.exe ./Student.proto --java_out=./
syntax = "proto3"; //版本
option optimize_for = SPEED; //加快解析
option java_outer_classname = "MyDataInfo "; //生成的外部类名，同时也是文件名

message  MyMessage{
  //定义一个枚举类型
  enum DateType{
      StudentType = 0;//proto3中要求从0开始
      WorkerType =1;
  }


  //表示第一个属性
  DateType date_type=1;

  //表示每次枚举类型最多只能出现类中一个
  oneof dataBody{
      //第二个属性
      Student student =2;
      //第三个属性
      Worker worker =3;
  }

}

//真正发送的对象
message Student{
  int32 id =1;//student类中有一个属性，名字为id，类型为int32（protobuf类型），1表示属性序号
  string name = 2;
}

message Worker{
  string name =1;
  int32 age =2;
}


